--- a/frontend/portal/package.json
+++ b/frontend/portal/package.json
@@ -37,10 +37,10 @@
     "cors": "^2.8.5",
     "date-fns": "^2.23.0",
     "date-fns-tz": "^1.1.6",
-    "eventsource": "^1.1.0",
-    "express": "^4.17.1",
+    "eventsource": "^1.1.2",
+    "express": "^4.19.2",
     "http-proxy": "^1.18.1",
-    "immer": "^9.0.5",
+    "immer": "^9.0.21",
     "multer": "^1.4.3",
     "next": "11.1.0",
     "next-connect": "^0.10.2",
@@ -82,7 +82,7 @@
     "eslint-config-next": "^11.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
@@ -90,6 +90,7 @@
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "ts-node": "^10.2.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.4.2"
   }
 }
